cargo-features = [ "edition2024" ]

[package]
name = "swear_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
enum_dispatch = "*"
rand = "*"
enum-as-inner = "*"
rustc-hash = "*"
swear_parser = { path = "swear_parser", default-features = false }
swear_lib_macros = { path = "swear_lib_macros", optional = false }
dashu-float = { version = "*", features = [ "rand" ] }
serde = { version = "*", features = [ "derive" ], optional = true }

libloading = { version = "*" }

[features]
default = [ "runtime", "parser" ]
serde = [ "dep:serde", "swear_parser/serde", "dashu-float/serde" ]
parser = [ "swear_parser/parser" ]
objects = [ ]
runtime = [ "objects" ]

[build]
target-dir = "../target"
