[package]
name = "swear_lib_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# serde = { version = "*", default-features = false, features = ["derive"] }
# basic-toml = "*"
# regex = "*"
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = [ "extra-traits", ] }
